	* src_IL/src/il_tiff.c (ilSaveTiff): Fixed a typo that was causing
	conflicting declarations error
	* configure.ac:264: Added IL_NO_WBMP since the Wbmp loading functions
	that are referenced, but not implemented, caused linking errors

2009-01-11 Denton Woods <doomwiz@users.sf.net>
	* MSVC9 Unicode projects: Updated to work better in 64-bit Windows.
	* il_vtf.c: Removed commented lines 238-242.
	* Created application to copy DLL files to the System32 directory.
	
2009-01-12 Denton Woods <doomwiz@users.sf.net>
	* ilut_directx9.c: Cleared up formatting some.

2009-01-13 Denton Woods <doomwiz@users.sf.net>
	* Converted source repository to SVN from CVS.

2009-01-15 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c / il.h: Added ilClampNTSC function.
	* il_squish.cpp: Added file.
	* il_dds-save.c: Added line 688.
	* il_states.c: Added lines for libsquish support.
	* il_dds-save.c (Compress): Added libsquish compression.
	* il_io.c (ilDetermineTypeF/L and ilIsValid/F/L): Added VTF, SUN and EXR.
	* il_io.c (ilIsValidF/L): Added TIF
	* il_jp2.c:131-137:Added these lines to take care of erroneous error generated by JasPer's buffering.
	* il_jp2.c: Added functions to save JPEG 2000 images.
	* il_utility.c (ilGetBppFormat): Added IL_ALPHA.
	* il_jp2.c (iLoadJp2Internal): Added 1 and 2 channel format loading.
	* il_dds-save.c:700-701: Changed to IL_RGBA.
	* il_dds-save.c (ChooseEndpoints): Changed to use norm squared instead of a sum of the components.
	* il_dds-save.c (GetBlock): Changed to copy adjacent data if it goes beyond the bounds of the image.
	* il_icon.c: Removed extra whitespace.
	* il_icns.c / il_internal.h: Added ilIsValidIcns*.
	* il_icns.h: Changed comments on ICNSDATA.
	* il_exr.c: Added ilIsValidExr*.
	* il_io.c (ilLoadF): Uncommented ilLoadJp2F.
	* il_dds-save.c (CompressTo565): Changed 24-bit to 16-bit code based on Charles Bloom's rant.
	* il_dds.c (DxtcReadColor/DxtcReadColors): Changed conversion to copy high bits to lowest bits as well.
	